--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,256 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<!-- <h1>Pages#home</h1>
+<p>Find me in app/views/pages/home.html.erb</p> -->
+
+<div class="banner" style="background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path "background.jpeg" %>')">
+      <div class="banner-content">
+        <h1>FIND YOUR SKI TRIP</h1>
+        <p>SnowBot finds for you the right package that fit your need!</p>
+        <form action="#" class="form-inline">
+          <input type="text" class="form-control input-lg" placeholder="My Start point">
+          <input type="text" class="form-control input-lg" placeholder="Mountains">
+          <input type="text" class="form-control input-lg" placeholder="checkin">
+          <input type="text" class="form-control input-lg" placeholder="checkout">
+          <select name="" id="" class="form-control input-lg">
+            <option value="1">1 person</option>
+            <option value="2">2 persons</option>
+            <option value="3">3 persons</option>
+            <option value="4">4 persons</option>
+            <option value="5">5 persons</option>
+          </select>
+         <!--   <input type="submit" class="btn btn-primary btn-lg" formaction="../map/map.html" value="Search" >  --><br /><br />
+       <button class="btn"><img src="<%= image_path "messenger.png" %>" alt=""> Start Chat in Messenger</button>
+        </form>
+      </div>
+    </div>
+
+  <div class="container">
+    <h2 class="text-center">What a hell is SnowBot?</h2>
+    <div class="row">
+      <div class="col-xs-12">
+        <center><iframe width="560" height="315" src="https://www.youtube.com/embed/i8Z6Ewlbl9k?rel=0" frameborder="0" allowfullscreen></iframe></center>
+      </div>
+    </div>
+  </div>
+
+  <div class="wrapper-grey">
+    <div class="container">
+      <h2 class="text-center">What is your next trip?</h2>
+          <!-- Code your cards  here -->
+      <div class="row">
+        <!-- design one card first -->
+        <div class="col-xs-12 col-sm-4">
+          <div class="card">
+            <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path "tignes-pic.jpg" %>');">
+                <div class="card-category">Resort</div>
+                <div class="card-description">
+                  <h2>Tignes</h2>
+                  <p>One of the biggest Resort</p>
+                </div>
+                <!-- <img class="card-avatar avatar_sm" src='images/tignes-logo.jpg'> -->
+                <a class="card-listing-link" href="../listing/listing.html"></a>
+            </div>
+            <div class="card-footer">
+              <div class="card-date">
+                <p>Zam's package from 12/12/17</p>
+              </div>
+              <div class="card-links">
+                <a href="#"><i class="fa fa-star"></i></a>
+                <a href="#"><i class="fa fa-heart"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-4">
+          <div class="card">
+        <!-- design one card first -->
+            <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path "espace-drivy.jpeg" %>');">
+                <div class="card-category">Transport</div>
+                <div class="card-description">
+                  <h2>Renault Espace</h2>
+                  <p>Top for long distance trip</p>
+                </div>
+                <!-- <img class="card-avatar avatar_sm" src='images/gab.png'> -->
+            </div>
+            <div class="card-footer">
+              <div class="card-date">
+                <p>Zam's package from 12/12/17</p>
+              </div>
+              <div class="card-links">
+                <a href="#"><i class="fa fa-star"></i></a>
+                <a href="#"><i class="fa fa-heart"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-4">
+          <div class="card">
+        <!-- design one card first -->
+            <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path "tignes-flat.jpg" %>');">
+                <div class="card-category">Housing</div>
+                <div class="card-description">
+                  <h2>Very nice 2 Bedrooms flat</h2>
+                  <p>Charming flat in Val Claret, lifts 1 min away</p>
+                </div>
+                <!-- <img class="card-avatar avatar_sm" src='images/cecile.png'> -->
+            </div>
+            <div class="card-footer">
+              <div class="card-date">
+                <p>Zam's package from 12/12/17</p>
+              </div>
+              <div class="card-links">
+                <a href="#"><i class="fa fa-star"></i></a>
+                <a href="#"><i class="fa fa-heart"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+      <div class="container text-center padded features">
+        <div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <img src="<%= image_path "lift.png" %>" alt="">
+
+            <br><br />
+            <h2>Discover a new French Resort</h2>
+            <p>We find the best resort for your trip</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <img src="<%= image_path "snow.png" %>" alt="">
+            <br><br />
+            <h2>We track the ski resorts weather</h2>
+            <p>We find for you the best Snow Depths and weather condition for your trip</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <img src="<%= image_path "car.png" %>" alt="">
+            <br><br />
+            <h2>We find you a car</h2>
+            <p>We track car rental in the sharing economy so that you have the best transportation deal</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <img src="<%= image_path "home.png" %>" alt="">
+            <br><br />
+            <h2>SnowBot finds you the right flat for your team</h2>
+            <p>We search for you the best deal for your crew within the sharing economy offering</p>
+          </div>
+        </div>
+      </div>
+
+  <div class="wrapper-grey">
+    <div class="container">
+      <h2 class="text-center">What is your next trip?</h2>
+          <!-- Code your cards  here -->
+      <div class="row">
+        <!-- design one card first -->
+        <div class="col-xs-12 col-sm-4">
+          <div class="card">
+            <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path "les arcs.jpg" %>');">
+                <div class="card-category">Resort</div>
+                <div class="card-description">
+                  <h2>Les Arcs</h2>
+                  <p>One of the best Resort</p>
+                </div>
+                <!-- <img class="card-avatar avatar_sm" src='images/tignes-logo.jpg'> -->
+                <a class="card-listing-link" href="../listing/listing.html"></a>
+            </div>
+            <div class="card-footer">
+              <div class="card-date">
+                <p>Tony's package from 15/12/17</p>
+              </div>
+              <div class="card-links">
+                <a href="#"><i class="fa fa-star"></i></a>
+                <a href="#"><i class="fa fa-heart"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-4">
+          <div class="card">
+        <!-- design one card first -->
+            <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path "c3picasso.jpg" %>');">
+                <div class="card-category">Transport</div>
+                <div class="card-description">
+                  <h2>C3 Picasso</h2>
+                  <p>Very confortable</p>
+                </div>
+                <!-- <img class="card-avatar avatar_sm" src='images/gab.png'> -->
+            </div>
+            <div class="card-footer">
+              <div class="card-date">
+                <p>Tony's package from 15/12/17</p>
+              </div>
+              <div class="card-links">
+                <a href="#"><i class="fa fa-star"></i></a>
+                <a href="#"><i class="fa fa-heart"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-4">
+          <div class="card">
+        <!-- design one card first -->
+            <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path "flat-les-arcs.jpg" %>');">
+                <div class="card-category">Housing</div>
+                <div class="card-description">
+                  <h2>Very nice flat in a chalet</h2>
+                  <p>Veryu cosy flat in Arcs 1950, at the center of the resort</p>
+                </div>
+                <!-- <img class="card-avatar avatar_sm" src='images/cecile.png'> -->
+            </div>
+            <div class="card-footer">
+              <div class="card-date">
+                <p>Tony's package from 15/12/17</p>
+              </div>
+              <div class="card-links">
+                <a href="#"><i class="fa fa-star"></i></a>
+                <a href="#"><i class="fa fa-heart"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <!-- Your newsletter code -->
+    <div class="text-center padded" id="newsletter">
+      <h2>Get news from us</h2>
+      <p>Leave us your mail and get news from us</p>
+      <form class="form-inline">
+        <input type="email" placeholder="bob@gmail.com" class="form-control">
+        <input type="submit" value="Subscribe" class="btn btn-primary">
+      </form>
+    </div>
+
+    <!-- Your map code -->
+    <div id="map" style="width: 100%;height: 500px;"></div>
+
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+
+    <script type="text/javascript">
+    var myLatlng = new google.maps.LatLng(48.865088,2.379843);
+    var myOptions = {
+      zoom: 16,
+      center: myLatlng,
+      scrollwheel: false,
+      mapTypeId: google.maps.MapTypeId.ROADMAP,
+      styles: [{"featureType":"landscape","stylers":[{"saturation":-100},{"lightness":65},{"visibility":"on"}]},{"featureType":"poi","stylers":[{"saturation":-100},{"lightness":51},{"visibility":"simplified"}]},{"featureType":"road.highway","stylers":[{"saturation":-100},{"visibility":"simplified"}]},{"featureType":"road.arterial","stylers":[{"saturation":-100},{"lightness":30},{"visibility":"on"}]},{"featureType":"road.local","stylers":[{"saturation":-100},{"lightness":40},{"visibility":"on"}]},{"featureType":"transit","stylers":[{"saturation":-100},{"visibility":"simplified"}]},{"featureType":"administrative.province","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"labels","stylers":[{"visibility":"on"},{"lightness":-25},{"saturation":-100}]},{"featureType":"water","elementType":"geometry","stylers":[{"hue":"#ffff00"},{"lightness":-25},{"saturation":-97}]}]
+    };
+    var map = new google.maps.Map(document.getElementById('map'), myOptions);
+    var marker = new google.maps.Marker({
+      position: myLatlng,
+      map: map,
+      title:"You are here!"
+    });
+    </script>
+
+    <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
