fix bug on production

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -64,7 +64,7 @@
         <div class="col-xs-12 col-sm-4">
           <div class="card">
         <!-- design one card first -->
-            <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path "espace-drivy.jpeg" %>');">
+            <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path "espace-drivy.jpg" %>');">
                 <div class="card-category">Transport</div>
                 <div class="card-description">
                   <h2>Renault Espace</h2>
