--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,10 +1,15 @@
 <div class="container">
   <h1>Your orders</h1>
   <h2>User: <%= current_user.email %></h2>
-  <% current_user.orders.first(3).each do |order| %>
+  <% current_user.orders.each do |order| %>
     <p>Total Price: <%= order.total_price %></p>
     <%= image_tag order.drivy_data["photo"], size: "200" %>
     <%= image_tag order.homeaway_data["photo"], size: "200" %>
+    <h3>Details of the order</h3>
+    <ul>
+      <li>Status: <%= order.status %></li>
+      <li>Amount: <%= humanized_money_with_symbol(order.amount) %></li>
+    <ul>
     <hr>
   <% end %>
 </div>
