better formatting of the dates in the offer view

--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,22 +1,33 @@
 <div class="container">
   <h1>Offers found for you</h1>
-  <% @offers.each do |offer| %>
-    <h2>Offer <%= offer.id %></h2>
-    <p><%= offer.flat.domain.name %>
-    <%= image_tag offer.flat.photo, size: "150" %> <span><%= offer.flat.price_by_night %>€</span>
-    <%= image_tag offer.car.photo, size: "200" %> <span><%= offer.car.price %>€</span>
-    <%= link_to "See details", offers_path %>
+  <p>
+    <span>From <%= @checkin.strftime("%A, %b %d") %></span>
+    to
+    <span><%= @checkout.strftime("%A, %b %d") %></span> <span>
+    (<%= "#{@diff_days}"%> <%= 'night'.pluralize %></span> )
   </p>
-  <p>Total: <%= offer.car.price + offer.flat.price_by_night %>€</p>
+
+  <hr>
+
+  <% @offers.each do |offer| %>
+  <h2>Offer <%= offer.id %></h2>
+  <p><%= offer.flat.domain.name %>
+    <%= image_tag offer.flat.photo, size: "150" %>
+    <span><%= offer.flat.price_by_night %>€</span> per night
+    <span><%=  %></span>
+    <%= image_tag offer.car.photo, size: "200" %> <span><%= offer.car.price %>€</span>
+  </p>
+  <p>Total: <%= offer.total_price %>€</p>
   <p>
     <%= simple_form_for(@order)  do |f| %>
     <%= f.input :car_price, :as => :hidden, :input_html => { :value => offer.car.price } %>
     <%= f.input :car_photo, :as => :hidden, :input_html => { :value => offer.car.photo } %>
     <%= f.input :flat_price, :as => :hidden, :input_html => { :value => offer.flat.price_by_night } %>
     <%= f.input :flat_photo, :as => :hidden, :input_html => { :value => offer.flat.photo } %>
+    <%= f.input :offer_price, :as => :hidden, :input_html => { :value => offer.total_price } %>
     <%= f.input :domain, :as => :hidden, :input_html => { :value => offer.flat.domain.id } %>
     <%= f.button :submit, class: "btn btn-primary" %>
     <% end %>
-    </p>
+  </p>
   <% end %>
 </div>
