--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,7 +30,7 @@
     </div>
   </div>
 
-  <div class="wrapper-grey">
+  <div class="wrapper-grey text-center">
     <div class="container">
       <h2 class="text-center">What is your next trip?</h2>
       <!-- Code your cards  here -->
@@ -228,7 +228,7 @@
   </div>
 
   <!-- Your map code -->
-  <div id="map" style="width: 100%;height: 500px;"></div>
+  <!-- <div id="map" style="width: 100%;height: 500px;"></div>
 
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
 
@@ -248,7 +248,7 @@
       title:"You are here!"
     });
   </script>
-
+ -->
   <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<!--   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script> -->
