--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,13 +24,13 @@
   <div class="container">
     <h2 class="text-center">What a hell is SnowBot?</h2>
     <div class="row">
-      <div class="col-xs-12">
-        <center><iframe width="560" height="315" src="https://www.youtube.com/embed/i8Z6Ewlbl9k?rel=0" frameborder="0" allowfullscreen></iframe></center>
+      <div class="video-responsive">
+        <center><iframe width="420" height="315" src="https://www.youtube.com/embed/i8Z6Ewlbl9k?rel=0" frameborder="0" allowfullscreen></iframe></center>
       </div>
     </div>
   </div>
 
-  <div class="wrapper-grey text-center">
+  <div class="wrapper-white text-center">
     <div class="container">
       <h2 class="text-center">What is your next trip?</h2>
       <!-- Code your cards  here -->
@@ -139,7 +139,7 @@
     </div>
   </div>
 
-  <div class="wrapper-grey">
+  <div class="wrapper-white">
     <div class="container">
       <h2 class="text-center">What is your next trip?</h2>
       <!-- Code your cards  here -->
