--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
 
-        <div class="col-xs-4">
+        <div class="network col-xs-12 col-md-4">
           <ul class="list-inline">
             <li><a href=""><i class="fa fa-youtube"></i></a></li>
             <li><a href=""><i class="fa fa-instagram"></i></a></li>
@@ -10,11 +10,11 @@
             <li><a href=""><i class="fa fa-twitter"></i></a></li>
           </ul>
         </div>
-        <div class="col-xs-4">
+        <div class="copyright col-xs-12 col-md-4">
           <p>Copyright ©SnowBot AI SAS 2017</p>
         </div>
 
-        <div class="col-xs-4">
+        <div class="cgv col-xs-12 col-md-4">
           <p> CGV | Mentions Légales | Confidentialité</p>
         </div>
 
