padding in input search on the home page

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -42,3 +42,11 @@
   background: url('../../images/messenger.png') left center no-repeat;
   padding-left: 15px;
 }
+
+
+.form-banner {
+  input {
+    // margin: 10px;
+  }
+
+}
