responsive login form and search bar on the home page

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -43,10 +43,10 @@
   padding-left: 15px;
 }
 
+.container-form-banner {
+  padding: 20px;
+}
 
-.form-banner {
-  input {
-    // margin: 10px;
-  }
-
+.banner-content {
+  margin-top: 90px;
 }
