--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -15,3 +15,12 @@
     margin-bottom: 20px
   }
 }
+
+.form-banner {
+  input, select {
+    margin-bottom: 15px;
+    text-align: center;
+    text-align-last:center;
+  }
+
+}
