--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,18 +6,21 @@
       <h1>FIND YOUR SKI TRIP</h1>
       <p>SnowBot finds for you the right package that fit your need!</p>
 
-      <%= form_tag offers_path, method: :get, class: 'form-inline form-banner' do %>
-        <%= text_field_tag 'start_city', nil, class: "form-control text-center", placeholder: "Start Address", autofocus: true %>
-        <%= select_tag 'mountain_chain', options_for_select(
-        Domain.select(:mountain_chain).map(&:mountain_chain).uniq
-        ),
-        class: "form-control text-center",
-          placeholder: "Mountain" %>
-        <%= date_field 'checkin', nil, class: "form-control datepicker text-center date-input", placeholder: "Checkin" %>
-        <%= date_field 'checkout', nil, class: "form-control datepicker text-center date-input", placeholder: "Checkout" %>
-        <%= select_tag 'guests_number', options_for_select([['1'], ['2'], ['3'], ['4'], ['5']]), class: "form-control text-center unselected", id: 'guest', prompt: "Guests" %>
-        <%= submit_tag "Start chat in Messenger", class: "btn home-btn" %>
-      <% end %>
+          <div class="container-form-banner text-center">
+            <%= form_tag offers_path, method: :get, class: 'form-inline form-banner' do %>
+              <%= text_field_tag 'start_city', nil, class: "form-control text-center", placeholder: "Start Address", autofocus: true %>
+              <%= select_tag 'mountain_chain', options_for_select(
+              Domain.select(:mountain_chain).map(&:mountain_chain).uniq
+              ),
+              class: "form-control text-center",
+                placeholder: "Mountain" %>
+              <%= date_field 'checkin', nil, class: "form-control datepicker text-center date-input", placeholder: "Checkin" %>
+              <%= date_field 'checkout', nil, class: "form-control datepicker text-center date-input", placeholder: "Checkout" %>
+              <%= select_tag 'guests_number', options_for_select([['1'], ['2'], ['3'], ['4'], ['5']]), class: "form-control text-center unselected", id: 'guest', prompt: "Guests" %>
+              <%= submit_tag "Search", class: "btn home-btn" %>
+            <% end %>
+          </div>
+
     </div>
   </div>
 
