--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -5,31 +5,36 @@
     to
     <span><strong><%= @checkout.strftime("%A, %b %d") %></strong></span>
     <span>
-    (<%= "#{@diff_days}"%> <%= 'night'.pluralize %>
+      (<%= "#{@diff_days}"%> <%= 'night'.pluralize %>
     </span> )
   </p>
 
   <hr>
 
+
   <% @offers.each do |offer| %>
-  <h2>Offer <%= offer.id %></h2>
-  <p><%= offer.flat.domain.name %>
-    <%= image_tag offer.flat.photo, size: "150" %>
-    <span><%= offer.flat.price_by_night %>€</span> per night
-    <span><%=  %></span>
-    <%= image_tag offer.car.photo, size: "200" %> <span><%= offer.car.price %>€</span>
-  </p>
-  <p><strong>Total: <%= offer.total_price %>€</strong></p>
-  <p>
-    <%= simple_form_for(@order)  do |f| %>
-    <%= f.input :car_price, :as => :hidden, :input_html => { :value => offer.car.price } %>
-    <%= f.input :car_photo, :as => :hidden, :input_html => { :value => offer.car.photo } %>
-    <%= f.input :flat_price, :as => :hidden, :input_html => { :value => offer.flat.price_by_night } %>
-    <%= f.input :flat_photo, :as => :hidden, :input_html => { :value => offer.flat.photo } %>
-    <%= f.input :offer_price, :as => :hidden, :input_html => { :value => offer.total_price } %>
-    <%= f.input :domain, :as => :hidden, :input_html => { :value => offer.flat.domain.id } %>
-    <%= f.button :submit, class: "btn btn-primary" %>
-    <% end %>
-  </p>
+  <h2>Offer <%= offer.id + 1%></h2>
+  <p><%= offer.flat.domain.name %></p>
+  <div class='offer-container'>
+    <div class="img_container">
+      <%= image_tag offer.flat.photo, class: 'flat_img' %>
+    </div>
+    <p><%= offer.flat.price_by_night %>€ per night</p>
+    <div class="img_container">
+      <%= image_tag offer.car.photo, class: 'car_img' %>
+    </div>
+    <p><%= offer.car.price %>€</p>
+  </div>
+  <p><strong>Total: <%= offer.total_price %>€ - <em><%= offer.total_price.fdiv(@guests_number.to_i)%>€ per person</em></strong></p>
+
+  <%= simple_form_for(@order)  do |f| %>
+  <%= f.input :car_price, :as => :hidden, :input_html => { :value => offer.car.price } %>
+  <%= f.input :car_photo, :as => :hidden, :input_html => { :value => offer.car.photo } %>
+  <%= f.input :flat_price, :as => :hidden, :input_html => { :value => offer.flat.price_by_night } %>
+  <%= f.input :flat_photo, :as => :hidden, :input_html => { :value => offer.flat.photo } %>
+  <%= f.input :offer_price, :as => :hidden, :input_html => { :value => offer.total_price } %>
+  <%= f.input :domain, :as => :hidden, :input_html => { :value => offer.flat.domain.id } %>
+  <%= f.button :submit, class: "btn btn-primary" %>
+  <% end %>
   <% end %>
 </div>
